# plasma

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
application/plasma-server/: .env.docker.example  .env.example  Cargo.toml  Dockerfile
application/plasma-server/src/: error.rs  main.rs
application/plasma-server/src/model/: chat.rs  db.rs  keys.rs  message.rs  mod.rs  user.rs
application/plasma-server/src/rest/: chat.rs  keys.rs  message.rs  mod.rs  user.rs
application/plasma-server/src/security/: hash.rs  token.rs
application/plasma-server/src/server/: mod.rs  web_error.rs
application/plasma-server/src/ws/: clients.rs  mod.rs
application/plasmax/: Cargo.toml
application/plasmax/src/: account.rs  chats.rs  cipher.rs  error.rs  keyring.rs  main.rs
application/plasmax/src/api/: body.rs  mod.rs  response.rs  ws.rs
application/plasmax/src/tui/: app.rs  mod.rs  tools.rs  ui.rs
lib/x3dh/: Cargo.toml
lib/x3dh/src/: error.rs  handshake.rs  keys.rs  lib.rs
