[package]
name = "plasma-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } 
dotenv = "0.15.0"
thiserror = "1.0"
