[package]
name = "plasma-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } 
dotenv = "0.15.0"
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.3"
chrono = "0.4"
sha3 = "0.10.6"
jsonwebtoken = "8.2.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
