[package]
name = "plasmax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
rpassword = "0.0.4"
thiserror = "1.0"
home = "0.5.5"
reqwest = { version = "~0.11.18", features = ["json", "multipart"] }
url = "2.4.0"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bson = { version = "2", features = ["chrono-0_4"] } 
crossterm = { version = "0.27" }
ratatui = "0.23.0"
itertools = "0.11.0"
